# clickhouse-rs

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STATE.md  TIME_TYPES_IMPLEMENTATION.md  docker-compose.yml  release.toml  rustfmt.toml
.docker/clickhouse/single_node/: config.xml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  docs_sync.yml  docs_verify.yml  publish.yml  stresshouse-benchmark-compare.yml
benches/: README.md  common.rs  common_select.rs  insert.rs  merge_bytes.rs  mocked_insert.rs  mocked_select.rs  perf.rs  select.rs  select_market_data.rs  select_numbers.rs  select_nyc_taxi_data.rs
clickhouse-jiff/: Cargo.toml
clickhouse-jiff/src/: lib.rs
clickhouse-jiff/src/wrappers/: date16.rs  date32.rs  mod.rs  signed_duration32.rs  signed_duration64.rs  timestamp32.rs  timestamp64.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/attributes/: mod.rs  row.rs
derive/src/tests/: cases.rs
derive/src/tests/snapshots/: generic_borrowed_row-2.snap  generic_borrowed_row-3.snap  generic_borrowed_row.snap  generic_owned_row-2.snap  generic_owned_row-3.snap  generic_owned_row.snap  serde_rename.snap  serde_skip_deserializing.snap  serde_skip_serializing.snap  simple_borrowed_row.snap  simple_owned_row.snap
docs/: batching.md  connection-pooling.md  index.mdx  migration.md  native-transport.md  navigation.json  types.md  wire-format.md
examples/: README.md  arrow.rs  async_insert.rs  clickhouse_cloud.rs  clickhouse_settings.rs  custom_http_client.rs  custom_http_headers.rs  data_types_derive_containers.rs  data_types_derive_simple.rs  data_types_new_json.rs  data_types_variant.rs  enums.rs  file_write.rs  insert.rs  inserter.rs  mock.rs  opentelemetry.rs  query_id.rs  query_settings.rs  raw_stream_into_file.rs  raw_stream_json_each_row.rs  server_side_params.rs  session_id.rs  stream_arbitrary_format_rows.rs  stream_into_file.rs  time_types_example.rs  usage.rs
ext-arrow/: CHANGELOG.md  Cargo.toml  README.md
ext-arrow/src/: lib.rs
macros/: release.toml
rowbinary/: Cargo.toml
rowbinary/src/: data_types.rs  decoders.rs  error.rs  header.rs  leb128.rs  lib.rs  types.rs
src/: arrow.rs  async_inserter.rs  batcher.rs  buffer.rs  buflist.rs  bytes_ext.rs  compression.rs  cursor.rs  data_types.rs  delete.rs  dynamic.rs  error.rs  escape.rs  fixed_string.rs  format.rs  headers.rs  http_client.rs  insert.rs  insert_formatted.rs  inserter.rs  introspection.rs  lib.rs  output_format.rs  pool_stats.rs  quantities.rs  query.rs  query_summary.rs  request_body.rs  response.rs  row.rs  row_metadata.rs  serde.rs  server_info.rs  struct_metadata.rs  summary.rs  summary_header.rs  test.rs  ticks.rs  unified.rs  unified_cursor.rs  (+7 more)
src/compression/: lz4.rs  mod.rs  zstd.rs
src/cursors/: bytes.rs  json.rs  mod.rs  native.rs  raw.rs  row.rs
src/custom_types/: fixed_string.rs  mod.rs
src/dynamic/: batcher.rs  encode.rs  error.rs  insert.rs  mod.rs  parsed_type.rs  schema.rs
src/native/: array.rs  async_inserter.rs  block_info.rs  callbacks.rs  client.rs  client_info.rs  columns.rs  compression.rs  connection.rs  cursor.rs  decode.rs  encode.rs  error_codes.rs  insert.rs  inserter.rs  io.rs  mod.rs  pool.rs  protocol.rs  query.rs  reader.rs  schema.rs  sparse.rs  string.rs  tcp.rs  writer.rs
src/query/: mod.rs  query.rs  query_flags.rs
src/rowbinary/: de.rs  de_rbwnat.rs  mod.rs  ser.rs  tests.rs  utils.rs  validation.rs
src/sql/: bind.rs  escape.rs  mod.rs  qualify.rs  ser.rs
src/sql_builder/: mod.rs
src/test/: handlers.rs  mock.rs  mod.rs
src/types/: bf16.rs  int256.rs  mod.rs
tests/: common.rs  integration.rs  test_compression.rs  test_cursor_error.rs  test_delete_and_update.rs  test_ip.rs  test_nested.rs  test_query.rs  test_serde.rs  test_time.rs  test_uuid.rs  test_wa_37420.rs  test_watch.rs
tests/it/: arrow.rs  async_inserter.rs  batcher.rs  bfloat16.rs  chrono.rs  cloud_jwt.rs  compression.rs  cursor_error.rs  cursor_reborrow.rs  cursor_stats.rs  dynamic.rs  dynamic_types.rs  examples.rs  fetch_bytes.rs  fetch_native.rs  fetch_raw.rs  https_errors.rs  insert.rs  insert_formatted.rs  inserter.rs  int128.rs  int256.rs  ip.rs  jiff.rs  main.rs  mock.rs  native.rs  nested.rs  opentelemetry.rs  query.rs  query_raw.rs  query_readonly.rs  query_summary.rs  query_syntax.rs  rbwnat.rs  rbwnat_header.rs  rbwnat_smoke.rs  rbwnat_validation.rs  time.rs  upstream_compat.rs  (+7 more)
tests/it/fixtures/: .gitattributes  nyc-taxi_trips_0_head_1000.tsv
types/: Cargo.toml  release.toml
types/src/: data_types.rs  decoders.rs  error.rs  leb128.rs  lib.rs
