[package]
name = "clickhouse-jiff"
description = "Integration for Jiff with ClickHouse"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
jiff = { version = "0.2.28", default-features = false }
serde_core = { version = "1.0.228", default-features = false }
