[package]
name = "clickhouse-derive"
version = "0.1.1"
description = "A macro for deriving clickhouse::Row"
authors = ["Paul Loyd <pavelko95@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
serde_derive_internals = "0.29"
