[package]
name = "clickhouse-types"
description = "Data types utils to use with Native and RowBinary(WithNamesAndTypes) formats in ClickHouse"
version = "0.1.0"

authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1.0.16"
bytes = "1.10.1"
